--- a/me/start-test.yml
+++ b/me/start-test.yml
@@ -4,17 +4,18 @@
   gather_facts: False
   any_errors_fatal: true
   become: yes
-  become_user: nieyinliang
+  become_user: meuser
   become_method: su
   vars:
-    home_work_dir: /home/nieyinliang/workspace/test/me-ansible
+    home_work_dir: ~/ansible-deploy
+    chain_bin_file_dir: ~/me-deploy/bin
     hosts_name: servers-chain-test servers-chain-test
     master_group: servers-chain-test
     slaves_group: servers-chain-test
-    node_count: 2
+    node_count: 7
     has_root_pwd: false
     master_node_host_ip: 192.168.0.207
     validator_begin_node_pos: 1
-    validator_end_node_pos: 2
+    validator_end_node_pos: 7
   roles:
     - chain
