--- a/me/start-test.yml
+++ b/me/start-test.yml
@@ -7,7 +7,7 @@
   become_user: meuser
   become_method: su
   vars:
-    home_work_dir: ~/me-deploy
+    chain_deploy_home_dir: ~/me-deploy
     chain_bin_file_dir: ~/me-deploy
     hosts_name: servers-chain-test servers-chain-test
     master_group: servers-chain-test
